--- a/radvalley.tex
+++ b/radvalley.tex
@@ -785,30 +785,30 @@ around low mass stars.
 
 \subsection{Inclusion of supplemental K2 planet candidates}
 In an attempt to improve the counting statistics in the occurrence rate calculations,
-we consider an enlarged planet sample. This population is the union of our existing sample of confirmed planets
+we will consider an enlarged planet sample. This sample is the union of our existing sample of confirmed planets
 with a set of additional planet candidates (PCs) from the \ktwo{}
 mission. Specifically, we consider the set of PCs reported by \cite{kruse19}
 %% could add more studies here
 from \ktwo{} campaigns 0-8 that includes 126 PCs not already included in our sample of confirmed planets
 and orbiting stars contained within our stellar sample.
 
-By definition, we cannot identify which PCs are true planets of interest for this study and
+By definition we cannot identify which PCs are true planets of interest for this study and
 which PCs are instead produced by an astrophysical false positive. 
 The inclusion of \ktwo{} PCs therefore requires that we account for sample contamination by false positives
 probabilistically. We do so by considering
-a number of studies from the literature that perform a transiting planet search in \ktwo{,} from any subset of its campaigns,
-and attempt to validate their uncovered PCs statistically using on follow-up observations
+a number of studies from the literature that perform a transiting planet search in \ktwo{---}from any subset of its
+campaigns---and attempt to validate their uncovered PCs statistically based on follow-up observations
 \citep{montet15,crossfield16b,dressing17,hirano18,livingston18a,mayo18}. Each of these studies utilized some combination of
 ground-based photometry to validate planet ephemerides, reconnaissance
-spectroscopy to identify spectroscopic binaries, and speckle or AO-assisted imaging to search for nearby stellar companions to
-their PC host stars. Each of the aforementioned studies used their respective set of follow-up observations together with the
+spectroscopy to identify spectroscopic binaries, and speckle or AO-assisted imaging to search for nearby stellar companions.
+Each of the aforementioned studies used their respective set of follow-up observations together with the
 statistical validation tool \texttt{vespa} \citep{morton12,morton15} to statistically classify their PCs as either a validated
-planet (VP)\footnote{We treat validated and confirmed planets as equivalent dispositions.},
+planet (VP)\footnote{Validated and confirmed planets are equivalent dispositions.},
 a false positive (FP), or some other inconclusive disposition (e.g. remains a PC). The FP rate around cool
 stars (\teff{} $< 4700$ K) from each study is estimated by calculating the ratio of the number of reported FPs to
-the total number of FPs and VPs. Notably, \cite{crossfield16b} showed that the FP rate in their \ktwo{} sample is dependent
+the total number of FPs plus VPs. Notably, \cite{crossfield16b} showed that the FP rate in their \ktwo{} sample is dependent
 on the measured planet radius as giant PCs have a larger likelihood of
-being a FP. Hence, we focus on PCs with $r_p<4$ R$_{\oplus}$ when deriving FP rates.
+being a FP. Hence, we only focus on PCs with $r_p<4$ R$_{\oplus}$ when deriving FP rates.
 
 The resulting FP rates are reported in Table~\ref{tab:FP}. Half of the studies do not find any probable
 FP signals among the small PCs orbiting cool stars in their samples. In such cases, only upper limits on the FP rate
@@ -818,22 +818,25 @@ which is also in agreement with the derived upper limits from the aforementioned
 We proceed by constructing $10^3$ realizations of the planet population
 that includes all confirmed planets from both \kepler{} and \ktwo{} plus a subset of the 126 \ktwo{} PCs from
 \cite{kruse19}. The subset of included PCs are randomly sampled from the full set of PCs
-according to the adopted FP rate such that each realization contains $0.943\cdot 126 \approx 119$ PCs.
+according to the adopted FP rate such that each realization contains $(1-0.057)\cdot 126 \approx 119$ PCs.
 
 \input{FPtable}
 
 The effect of including PCs on the derived occurrence rates is assessed by comparing the $f_j$ distributions
-measured with and without the inclusion of PCs. The results are depicted in
-Fig.~\ref{fig:rphistPCs}. Again we scale the \ktwo{} occurrence rates
+measured with and without the inclusion of PCs (Fig.~\ref{fig:rphistPCs}).
+Again we scale the \ktwo{} occurrence rates
 to those from \kepler{} such that the cumulative occurrence of close-in planets with $r_p \leq 4$ R$_{\oplus}$
 is identical between the two planet populations as their contributions from \kepler{} planets are identical.
 The radius valley continues to be resolved in
 the MAP occurrence rates. Furthermore, the addition of PCs reduces the median $f_j$ uncertainty among planets
 with $r_p>1$ R$_{\oplus}$ from
 0.0216 to 0.0186 planets per star (i.e. $\sim 15$\% improvement). However, the partial filling of the gap is
-more substantial as the contrast between the maximum $f_j$ of the terrestrial planet peak ($r_p \sim 1.3$ R$_{\oplus}$)
+further substantiated as the contrast between the maximum $f_j$ of the terrestrial planet peak ($r_p \sim 1.3$ R$_{\oplus}$)
 and the minimum $f_j$ of the valley ($r_p \sim 1.6$ R$_{\oplus}$) decreases from 0.070
-to 0.054 R$_{\oplus}$ (i.e. $3.2\sigma \to 2.9\sigma$).
+to 0.054 R$_{\oplus}$ (i.e. $3.2\sigma \to 2.9\sigma$). Contamination by true FPs in the planet sample containing
+PCs may contribute to the reduced significance of the valley so we revert to considering confirmed planets only
+for the remainder of this study.
+
 
 \begin{figure*}
   \centering
@@ -841,10 +844,10 @@ to 0.054 R$_{\oplus}$ (i.e. $3.2\sigma \to 2.9\sigma$).
   \caption{Comparison of occurrence rates with and without planet candidates included. \emph{Left panel}:
     same as Fig.~\ref{fig:rphist}. \emph{Right panel}: histogram depicting the relative occurrence
     rate of close-in planets with orbital periods $<100$ days derived from the population of confirmed
-    planets from \kepler{} and \ktwo{} and supplemented by 119 PCs
+    planets from \kepler{} and \ktwo{} and supplemented by 119 randomly selected PCs
     around low mass stars from \cite{kruse19}. The radius valley continues to be resolved with
-    the inclusion of PCs which improve the median uncertainty on the occurrence rate bins although the
-    gap becomes less prominent with numerous PCs partially filling the valley.}
+    the inclusion of PCs improving the median uncertainty on the occurrence rate bins although the
+    bimodality becomes less prominent with numerous PCs partially filling the valley.}
   \label{fig:rphistPCs}
 \end{figure*}
 
@@ -1269,7 +1272,8 @@ using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are
 \acknowledgements
 We thank Martin Paegert for his efforts in contributing relevent data to and for his assistance in querying the \tess{}
 CTL database. We also thank Jennifer Winters and Jonathan Irwin for discussions regarding the population of nearby
-M dwarfs. We thank the Canadian Institute for Theoretical Astrophysics for use of the Sunnyvale computing cluster
+M dwarfs. We also thank Sam Quinn for discussions regarding past results from the \ktwo{} mission.
+We thank the Canadian Institute for Theoretical Astrophysics for use of the Sunnyvale computing cluster
 throughout the early stages of this work. RC was supported by the Natural Sciences and Engineering Research Council of
 Canada and the NASA ??. 
 
